samples/_failures_safe/1761224076_4e6d5d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4013be15.c: In function ‘main’:
./samples/SAFE/__tmp_4013be15.c:132:9: error: expected expression at end of input
  132 |         printf("[%s] %s: %s\n", entry->timestamp, entry->level,
      |         ^~~~~~
./samples/SAFE/__tmp_4013be15.c:132:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4013be15.c:132:9: error: expected declaration or statement at end of input
